// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvailableCredits container should render when there are no premium credits 1`] = `
<AvailableCredits
  availableCredits={0}
  redeemPremiumCredits={[Function]}
  userHasValidSub={false}
>
  <div
    className="no-credits available-credit flex-row vertically-centered space-between"
  >
    <div
      className="credit-quantity"
    >
      You have 
      <span>
        0 weeks 
      </span>
       of Teacher Premium Credit available.
    </div>
    <a
      className="q-button button cta-button bg-orange"
      href="/referrals"
    >
      Earn Premium Credits
    </a>
  </div>
</AvailableCredits>
`;

exports[`AvailableCredits container should render when there are premium credits 1`] = `
<AvailableCredits
  availableCredits={28}
  redeemPremiumCredits={[Function]}
  userHasValidSub={false}
>
  <div
    className="null available-credit flex-row vertically-centered space-between"
  >
    <div
      className="credit-quantity"
    >
      You have 
      <span>
        4 weeks 
      </span>
       of Teacher Premium Credit available.
    </div>
    <button
      className="q-button cta-button bg-orange has-credit"
      onClick={[Function]}
      type="button"
    >
      Redeem Premium Credits
    </button>
  </div>
</AvailableCredits>
`;
